[package]
name = "work_log"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.23", features = ["derive"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
textplots = "0.8"
colour = "2.1.0"
rgb = "0.8.27"
dirs = "5.0.1"

[[bin]]
name = "work_log"
path = "src/main.rs"

[[bin]]
name = "example"
path = "src/example.rs"

[lib]
name = "work_log"
path = "src/lib/lib.rs"
